package application;

import java.util.ArrayList;

public class Episode extends Series {

    String title;
    ArrayList<String> category;
    float rating;


    public Episode(String title, ArrayList<String> category, float rating, ArrayList<Integer> episode, ArrayList<Integer> season) {
        super(title, category, rating, episode, season);
    }
}
